--- a/wiki/OpenEVSE_boards.wiki
+++ b/wiki/OpenEVSE_boards.wiki
@@ -1,19 +1,20 @@
 #summary Comparison OpenEVSE boards.
 #labels Featured
 
-|| || OpenEVSE || Arduino Shield || Through Hole ||
-|| Picture ||http://farm9.staticflickr.com/8160/7349066816_a0c3bb7618_n.jpg||http://farm7.staticflickr.com/6222/7003031805_747830f4b7_n.jpg||http://farm9.staticflickr.com/8453/8041888276_24c025f0b7.jpg||
+|| || OpenEVSE Plus || Arduino Shield || Through Hole ||
+|| Picture ||http://farm8.staticflickr.com/7247/8169379635_84f577e1f3_n.jpg||http://farm7.staticflickr.com/6222/7003031805_747830f4b7_n.jpg||http://farm9.staticflickr.com/8453/8041888276_24c025f0b7.jpg||
 || || Prebuilt only || Kit || DIY files only ||
-|| Current HW version || OpenEVSE v6 || OpenEVSE shield v1 || DIY EVSE v4 || 
+|| Current HW version || OpenEVSE Plus || OpenEVSE shield v1 || DIY EVSE v4 || 
 || Firmware || pre-loaded || Requires Arduino UNO || ||
+|| Power Supply || Integrated 4W || External || External || 
 || GFCI || Yes || Yes || Yes ||
 || Diode Check || Yes || Yes || Yes ||
-|| Ground/Stuck Relay Check || With Advanced Power Supply || With Advanced Power Supply || On board L1/L2 sense||
+|| Ground/Stuck Relay Check || Yes || With Advanced Power Supply || Yes ||
 || Size || 2.2"x 1.75"x 1/2" || 3" x 2" x 1" || 3.32" x 2.55" x 1/2" ||
-|| IO pins || most unused accessible || all pins accessible || all pins accessible ||
+|| IO pins || I2C and FTDI || all pins accessible || all pins accessible ||
 || Programmer || ISP or FTDI || ISP or USB/FTDI || ISP or FTDI ||
 || Serial ||  FTDI || USB/FTDI || FTDI || 
 || Suited for || Most EVSEs || Hardware/Software Development || Hardcore DIYers ||
-|| Price || $80 || $45 plus Arduino Uno (~$30) || Board $14 + components $60 ||
+|| Price || $150 || $45 plus Arduino Uno (~$30) || Board $14 + components $60 ||
 
 How to use the OpenEVSE board to make a [ExampleEVSE basic EVSE].
