Edited wiki page OpenEVSE_Workshop through web user interface.

--- a/wiki/OpenEVSE_Workshop.wiki
+++ b/wiki/OpenEVSE_Workshop.wiki
@@ -3,7 +3,10 @@
 = Introduction =
 
 OpenEVSE Workshop Saturday December 1, 2012.
-Immediately following the Socal LEAF gathering. Estimated 1100.
+Immediately following the Socal LEAF gathering. http://www.mynissanleaf.com/viewtopic.php?f=51&t=9695
+
+
+Estimated Start 1100.
 
 Space Limited to 8 builders. Helpers, guests and visitors welcome.
 
