--- a/wiki/J1772Basics.wiki
+++ b/wiki/J1772Basics.wiki
@@ -53,3 +53,11 @@ Amps = (Duty Cycle - 64) * 2.5
 *Pilot - State - 24A*
 
 <a href="http://www.flickr.com/photos/60192309@N05/5494981337/" title="24 Amp - Charging by chris1howell, on Flickr"><img src="http://farm6.static.flickr.com/5219/5494981337_cc57267a87.jpg" width="375" height="500"</a>
+
+=Proximity=
+The proximity runs between the EV and the J1772 handle, some J1772 cordsets include 4 wires (AC Hot 1, AC Hot 2, Ground, Pilot) and some have 5 wires an additional to access the proximity circuit. 
+
+The proximity circuit should read about 450-500 ohms when measured from proximity to ground. When the button is pressed the reading should drop to about 150 ohms. The change in resistance signals the EV to stop pulling current. The relay in the EVSE will stay closed until the pilot is dropped however J1772 compliant EVs will stop pulling significant current.
+
+*Note*- There have been many reports of missing proximity components or binding in the switch of inexpensive J1772 cables from China. Before using on of these cables measure resistance in the proximity circuit and ensure the resistance drops as expected when the button is pressed.
+http://upload.wikimedia.org/wikipedia/commons/b/b6/J1772_signaling_circuit.gif
